---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Re-added the keyboard shortcut to confirm modal dialogs by pressing 'Enter'
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 15. 08. 2020
  Bugfixes:
    - Fixed a potential crash on-load when playing on older maps

---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 15. 08. 2020
  Changes:
    - Adjusted styling in some places
    - Updated the screenshots to reflect the recent redesigns
  Bugfixes:
    - Fixed a crash when trying to edit a subfactory without an icon

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 14. 08. 2020
  Changes:
    - Updated for Factorio 1.0; Happy release day everyone!🥳 It's been a great time working on this mod and interacting with all of you. There's a write-up about these past many months in the mod portal discussions and on Discord, if you're interested in reading about some numbers and feelings.

---------------------------------------------------------------------------------------------------
Version: 0.18.52
Date: 13. 08. 2020
  Changes:
    - Redesigned the subfactory, module, beacon and product picker dialogs
    - Made it so recipes for fuels can also be inserted directly below by shift-left-clicking them
    - Added some info about why a dialog can not be submitted
    - Adjusted styling in numerous ways
  Bugfixes:
    - Fixed the issue that opening a vanilla interface while a Factory Planner modal dialog is open would not close the main FP interface window
    - Properly fixed scrolling in the recipe picker
    - Fixed recipe picker category icons leaving their designated spot sometimes
