@@ -147,6 +147,10 @@ utility_title_components_tt=Shows the machines and modules needed to construct t
 utility_title_notes=Subfactory notes
 components_needed_tt=[font=default-bold]__1__[/font] in inventory / [font=default-bold]__2__[/font] needed
 no_components_needed=No __1__ needed
+request_items=Request items
+request_items_tt=Requests all the items that your inventory is missing to construct this __1__.
+request_logistics_not_researched=[img=fp_sprite_warning_red] The ’__1__’-technology needs to be researched for this to be possible
+request_no_items_necessary=[img=fp_sprite_warning_red] Your inventory already contains all the necessary items already
 
 # Preferences
 preferences=Preferences
@@ -272,6 +276,7 @@ archive=Archive
 # Locale prefixes: s = singular; p = plural; l = lowercase; u = uppercase
 pl_subfactory=__plural_for_parameter_1_{1=subfactory|rest=subfactories}__
 pu_subfactory=__plural_for_parameter_1_{1=Subfactory|rest=Subfactories}__
+pl_floor=__plural_for_parameter_1_{1=floor|rest=floors}__
 pu_floor=__plural_for_parameter_1_{1=Floor|rest=Floors}__
 pl_item=__plural_for_parameter_1_{1=item|rest=items}__
 pl_product=__plural_for_parameter_1_{1=product|rest=products}__
